--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "ajv": "^6.10.2",
     "axios": "^0.18.0",
+    "clipboard": "^2.0.4",
     "js-md5": "^0.7.3",
     "lodash": "^4.17.15",
     "node-sass": "^4.9.4",
